--- a/config/config.yaml
+++ b/config/config.yaml
@@ -13,3 +13,9 @@ data_validation:
 data_trasformation:
   root_dir: artifacts/data_trasformation
   data_path: artifacts/data_ingestion/winequality-red.csv
+
+model_trainer:
+  root_dir: artifacts/model_trainer
+  train_data_path: artifacts/data_trasformation/train.csv
+  test_data_path: artifacts/data_trasformation/test.csv
+  model_name: model.joblib
